# golOpenGL

./: .gitignore  CMakeLists.txt  README.md
include/: Barier.h  GameOfLife.h  Paths.h  Renderer.h  Shader.h  Window.h
shaders/: shader.frag  shader.vert  shaderText.frag  shaderText.vert
src/: GameOfLife.cpp  Renderer.cpp  Shader.cpp  Window.cpp  main.cpp
